--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
 = XYZ Reader Starter Code
 
 This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+![Screenshot](Screenshot_2017-07-31-11-57-28.png)
+![Screenshot](Screenshot_2017-07-31-11-57-42.png)
